--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">News App</string>
-    <string name="news_api_key" translatable="false">YOUR_NEWS_API_KEY</string>
+    <string name="news_api_key" translatable="false">c16a745c1a0241e8a7d26efb1015b76f</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="category_business">Business</string>
