--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -13,4 +13,7 @@
     <string name="news_dialog_info">Weitere Informationen finden Sie auf der Website.</string>
     <string name="goto_website">Gehen Sie zur Webseite</string>
     <string name="search_in_everything">Suche in allem…</string>
+    <string name="newnews">• NewNews •</string>
+    <string name="todo">TODO</string>
+    <string name="enticon">entIcon</string>
 </resources>
