--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -13,4 +13,7 @@
     <string name="news_dialog_info">Allez sur le site Web pour plus de détails.</string>
     <string name="goto_website">Aller sur un site Internet</string>
     <string name="search_in_everything">Rechercher dans tout…</string>
+    <string name="newnews">• NewNews •</string>
+    <string name="todo">TODO</string>
+    <string name="enticon">entIcon</string>
 </resources>
