--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -13,4 +13,7 @@
     <string name="news_dialog_info">Vai al sito Web per maggiori dettagli.</string>
     <string name="goto_website">Vai al sito Web</string>
     <string name="search_in_everything">Cerca tutto ...</string>
+    <string name="newnews">• NewNews •</string>
+    <string name="todo">TODO</string>
+    <string name="enticon">entIcon</string>
 </resources>
