--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="news_dialog_info">Go to Website for more details.</string>
     <string name="goto_website">Go to Website</string>
     <string name="search_in_everything">Search in everything…</string>
+    <string name="newnews">• NewNews •</string>
+    <string name="todo">TODO</string>
+    <string name="enticon">entIcon</string>
 </resources>
